# ComplaintSystem

./: alembic.ini  db.py  main.py  pyproject.toml
commands/: create_super_user.py
managers/: auth.py  complaint.py  user.py
migrations/: env.py
migrations/versions/: 4feff673b41e_initial.py
models/: complaint.py  enums.py  user.py
resources/: auth.py  complaint.py  user.py
schemas/request/: complaint.py
schemas/response/: complaint.py  user.py
